	operator since you can do "a+" as "aa*"

	*** To be refined. (ARSE = anthony's reduced search expressions)

--1.73.11--

   !	dnsListQueryNs: fix recursion bug related to SOA handling and
	the lack of NS records, other than glue records for a domain.
	For example mxshelter.com has only glue records, but no properly
	defined NS records by the primary name server.

--1.73.10--

   !	dnsListQueryNs: Remodeled to handle both NS BL and NS IP BL.

   !	uri.c: Added -N option to do look up against an NS IP BL.

--1.73.9--

   !	file.c: only call chown/fchown is we're root.

   !	dnsListQueryNs: after some dispute with Alex Broens concerning
	previous lookup algorithms, have simplified the search. The
	previous algorithm relied on the DNS server doing the recursive
	search of the name from host to top level looking for NS or SOA
	per the request. Some DNS servers appear not to do this for us,
	which would result in a incorrect failure.

	This version handles subdomains, CNAME redirection, and SOA
	records. Essentially this should handle NS BL that list by
	NS domain (Alex B) or by NS host name (April L).

   +	Added pdqSetServers in order to choose an alternative list of
	name servers.

   +	uri.c: Add -Q option to allow specify a list of name servers.

--1.73.8--

   !	uriHttpOrigin: changed from IMPLICIT_DOMAIN_MIN_DOTS (2) to 1,
   	because of the trend for shorter URL strings using single dot
   	domains, eg. http://twitter.com/

   !	NetBSD does not define union semun. A comment in sys/Mutex.c
	states that according to SUS (X/OPEN) we have to define it
	ourselves. Replaced OS based macros with more generic detection
	of when union semun is defined or not.

--1.73.7--

   !	dnsListQueryIP: DNS servers often provide extra A records in the
	additional section of a DNS reply, which typically relate to the
	authority section NS records. We now ensure that only the A
	records in the answer section are checked against the BL.
	Reported by Sergiu Dunca.
